--- a/en/index.qmd
+++ b/en/index.qmd
@@ -1,4 +1,5 @@
 ---
+title: "A Conversation on Causality at Our Table"
 format:
   html:
     toc: true
@@ -10,13 +11,12 @@ listing:
   feed:
     title: "A Conversation on Causality at Our Table"
     items: 20
-    type: metadata
+    type: full
 ---
 
-::: hero-header
+::: {.hero-header}
 ![](../image/father-daughter.png){.hero-header-img}
 :::
-
 
 # Brewing coffee, exchanging words. As the steam drifts upward, time softens, and the world of statistics opens little by little.
 
@@ -140,3 +140,6 @@ First, reading the **Study Design** series will give you an overview of the clin
 - Want to see the process through to shaping and delivering your research: Publish a Paper
 
 While each episode stands independently, reading the whole reveals how everyday life, clinical practice, causality, data, cognition, and language connect as one flow. Gradually, a map of the research endeavor sketches itself in your mind. Grab your favorite drink and enjoy the journey of conversation between the two.
+
+This site shares selected R-related posts via  
+<a href="https://www.r-bloggers.com">R-bloggers</a>
